change these lines

--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,8 @@ FONT SIZE SYSTEM (px)
   position: absolute;
   width: 0%;
   bottom: 0;
-  left: 0;
+  left: 50%;
+  transform: translateX(-50%);
   background-color: #f9bf29;
   height: 0.5rem;
   transition: all 0.3s ease-in-out;
